<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.game</groupId>
  <artifactId>ddyx</artifactId>
  <version>1.0-SNAPSHOT</version>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.2.5.RELEASE</version>
  </parent>

  <name>ddyx</name>
  <description>一个赢豆豆的游戏</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <!-- swagger-ui -->
    <springfox.swagger2.version>2.7.0</springfox.swagger2.version>
  </properties>

  <dependencies>
    <!-- 添加Web依赖(servlet) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- 引入lombak插件 -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!--使用 Spring Data JPA -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <!-- mysql 链接依赖包 -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
    </dependency>

    <!-- JWT算法 -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>0.7.0</version>
    </dependency>

    <!-- JSON 转换 -->
    <dependency>
      <groupId>com.alibaba</groupId>
      <artifactId>fastjson</artifactId>
      <version>1.2.83</version>
    </dependency>
    <!-- swagger2 -->
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger2</artifactId>
      <version>${springfox.swagger2.version}</version>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger-ui</artifactId>
      <version>${springfox.swagger2.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>org.springframework.cloud</groupId>-->
<!--      <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>-->
<!--      <version>2.0.2.RELEASE</version>-->
<!--    </dependency>-->

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>appassembler-maven-plugin</artifactId>
        <version>1.8.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>assemble</goal>
              <goal>generate-daemons</goal>
            </goals>
            <configuration>
              <repositoryLayout>flat</repositoryLayout>
              <repositoryName>lib</repositoryName>
              <binFolder>bin</binFolder>
              <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
              <configurationDirectory>resources</configurationDirectory>
              <copyConfigurationDirectory>true</copyConfigurationDirectory>
              <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
              <useWildcardClassPath>true</useWildcardClassPath>
              <assembleDirectory>${project.build.directory}/ddyx</assembleDirectory>
              <extraJvmArguments>-Xms768m -Xmx1024m -XX:PermSize=128m
                -XX:MaxPermSize=256m -XX:NewSize=192m -XX:MaxNewSize=384m
              </extraJvmArguments>
              <platforms>
                <platform>windows</platform>
                <platform>unix</platform>
              </platforms>
              <programs>
                <program>
                  <mainClass>org.game.App</mainClass>
                  <name>run</name>
                </program>
              </programs>
              <daemons>
                <daemon>
                  <jvmSettings>
                    <initialMemorySize>768M</initialMemorySize>
                    <maxMemorySize>1024M</maxMemorySize>
                    <maxStackSize>128M</maxStackSize>
                  </jvmSettings>
                </daemon>
              </daemons>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
